<resources>
    <string name="app_name">AppChat</string>
    <string name="app_chat">App Chat</string>
    <string name="dang_nhap">ĐĂNG NHẬP</string>
    <string name="dang_ky">ĐĂNG KÝ</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tin Nhấn</string>
    <string name="tab_text_2">Danh Bạ</string>
    <string name="tab_text_3">Nhóm</string>
    <string name="tab_text_4">Thông Tin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dang_ky_tai_khoan">Đăng ký tài khoản</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btn_dang_ky">Đăng Ký</string>
    <string name="dang_nhap_tai_khoan">Đăng nhập tài khoản</string>
    <string name="dang_xuat">Đăng Xuất</string>
    <string name="quen_mat_khau">Quên mất khẩu</string>
    <string name="todo">TODO</string>
</resources>
