<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DangNhapActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5sp"
        android:layout_marginStart="5sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/dang_nhap_tai_khoan"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_horizontal"
            android:textAlignment="center"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/metemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:met_floatingLabel="normal"
            android:hint="@string/email"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/metpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:met_floatingLabel="normal"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/btnDangNhap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/botron_button"
            android:text="@string/dang_nhap"
            android:textColor="#fff"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvQuenMatKhau"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/quen_mat_khau"
            android:layout_marginTop="15sp"
            android:textStyle="italic"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
</RelativeLayout>